[package]
name = "tracc"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
# bitflags = "1.3.2"
lazy_static = "1.4.0"
thiserror = "1.0.30"



[lib]
name = "tracc"
path = "src/lib.rs"
