[package]
name = "tracc"
version = "0.7.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
# bitflags = "1.3.2"
lazy_static = "1.4.0"
thiserror = "1.0.30"
log = "0.4"
simplelog = "0.12.0"
anyhow = "1.0.65"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
tracing-log = "0.1.3"



[lib]
name = "tracc"
path = "src/lib.rs"
